fixed buttons moving due to overflowing text

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -16,6 +16,7 @@ a,
 button,
 input {
     cursor: none !important;
+    vertical-align:top;
 }
 
 h1,
